fix: remove white gap

--- a/src/block/separator/style.scss
+++ b/src/block/separator/style.scss
@@ -75,12 +75,14 @@
 	.ugb-separator__bottom-pad {
 		height: 0;
 		width: 100%;
+		z-index: 2; // Ensure that our paddings are on top to prevent a thin line from showing.
+		position: relative;
 	}
 	.ugb-separator__top-pad {
-		margin-bottom: -3px; // Prevent white lines.
+		margin-bottom: -1px; // Prevent white lines.
 	}
 	.ugb-separator__bottom-pad {
-		margin-top: -3px; // Prevent white lines.
+		margin-top: -1px; // Prevent white lines.
 		background: #abb8c3;
 	}
 
